<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/explore"
            android:checked="true"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/explore" />
        <item
            android:id="@+id/tv_shows"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/tv_shows" />
        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/favourite" />
        <item
            android:id="@+id/watched"
            android:icon="@drawable/ic_done_all_black_24dp"
            android:title="@string/watched" />
        <item
            android:id="@+id/genres"
            android:icon="@drawable/ic_voicemail_black_24dp"
            android:title="@string/genres" />
    </group>
    <item android:title="@string/additional">
        <menu>
            <group
                android:id="@+id/group3"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/profile"
                    android:icon="@drawable/ic_person_black_24dp"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/achievements"
                    android:icon="@drawable/ic_filter_vintage_black_24dp"
                    android:title="@string/achievements" />
                <item
                    android:id="@+id/search"
                    android:icon="@drawable/ic_search_black_24dp"
                    android:title="@string/search" />
            </group>
        </menu>
    </item>
</menu>